# lemmyremindyou

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  docker-compose.yml
migrations/2023-07-13-102308_reminder/: down.sql  up.sql
src/: api.rs  dto.rs  lib.rs  main.rs  messages.rs  models.rs  schema.rs
