[package]
name = "lemmyremindyou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0.171", features = ["derive"] }
chrono = "0.4.26"
regex = "1.9.1"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
env_logger = "0.10.0"
log = "0.4.0"
diesel_migrations = "2.1.0"